# try-bevy

./: Cargo.toml  flake.nix  justfile
src/: main.rs
